--- a/client/templates/routes/home/home.css
+++ b/client/templates/routes/home/home.css
@@ -1,9 +1,71 @@
-div.index {
+div.home {
+  margin-top: 50px;
+}
+
+.index-wrapper {
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
   margin-top: 100px;
 }
 
+
+/* Container box to set the sides relative to */
+.cube {
+  width: 30%;
+  min-width: 320px;
+  margin: 0 auto;
+  height: 300px;
+
+  -webkit-transition: -webkit-transform .33s;
+  transition: transform .33s; /* Animate the transform properties */
+
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d; /* <-NB */
+}
+
+/* The two faces of the cube */
+.flippety,.flop {
+  background: rgb(248, 248, 248);
+  border: 1px solid #e7e7e7;
+
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+
+  -webkit-box-shadow: 0 0 5px rgba(105, 108, 109, .2);
+  box-shadow: 0 0 5px rgba(105, 108, 109, .2);
+  height: 300px;
+  padding: 20px;
+}
+
+/* Position the faces */
+.flippety {
+  /*
+  -webkit-transform: translateZ(150px);
+  transform: translateZ(150px);
+  */
+}
+
+.flop {
+
+  -webkit-transform: rotateX(-90deg) translateZ(-150px) translateY(150px);
+  transform: rotateX(-90deg) translateZ(-150px) translateY(150px);
+
+}
+
+/* Rotate the cube */
+.cube.rotate {
+  -webkit-transform: rotateX(90deg) translateZ(150px)  translateY(-150px);
+  transform: rotateX(90deg) translateZ(150px)  translateY(-150px); /* Text bleed at 90º */
+}
+
+/*svg {
+  position: absolute;
+  top: 100px;
+  left: 150px;
+}
+
 .hexagon {
-  fill: white;
+  fill: #e7e7e7;
   pointer-events: all;
 }
 
@@ -13,17 +75,17 @@ div.index {
 }
 
 .hexagon :hover {
-  fill: pink;
+  fill: #a5a5a5;
 }
 
 .hexagon .fill {
-  fill: red;
+  fill: #727272;
 }
 
 .mesh {
   fill: none;
   stroke: #000;
-  stroke-opacity: .2;
+  stroke-opacity: .3;
   pointer-events: none;
 }
 
@@ -33,3 +95,4 @@ div.index {
   stroke-width: 2px;
   pointer-events: none;
 }
+*/
